crates/pack/tests/compile_fail/fact_struct_literal.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/fact_struct_literal.rs:9:13
  |
9 |         id: "test-id".to_string(),
  |             ^^^^^^^^^^^^^^^^^^^^^ expected `FactId`, found `String`
  |
help: call `Into::into` on this expression to convert `String` into `FactId`
  |
9 |         id: "test-id".to_string().into(),
  |                                  +++++++

error: cannot construct `Fact` with struct literal syntax due to private fields
 --> tests/compile_fail/fact_struct_literal.rs:7:17
  |
7 |     let _fact = Fact {
  |                 ^^^^
8 |         key: ContextKey::Seeds,
  |         ---------------------- private field
  |
  = note: ...and other private fields `promotion_record` and `created_at` that were not provided
